LexerParser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------

state 57 contains 15 reduce/reduce conflicts.
state 138 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> program id ';' Body '.'                 (1)
	Body -> Locals Block                               (2)
	Locals -> Locals Local                             (3)
	Locals ->                                          (4)
	Local -> var Variables                             (5)
	Local -> label id Ids ';'                          (6)
	Local -> Header ';' Body ';'                       (7)
	Local -> forward Header ';'                        (8)
	Variables -> Variables IdsAndType                  (9)
	Variables -> IdsAndType                            (10)
	IdsAndType -> id Ids ':' Type ';'                  (11)
	Ids -> Ids ',' id                                  (12)
	Ids ->                                             (13)
	Header -> procedure id '(' Arguments1 ')'          (14)
	Header -> function id '(' Arguments1 ')' ':' Type   (15)
	Arguments1 ->                                      (16)
	Arguments1 -> Arguments2                           (17)
	Arguments2 -> Arguments2 ';' Formal                (18)
	Arguments2 -> Formal                               (19)
	Formal -> Vars id Ids ':' Type                     (20)
	Vars ->                                            (21)
	Vars -> var                                        (22)
	Type -> integer                                    (23)
	Type -> real                                       (24)
	Type -> boolean                                    (25)
	Type -> char                                       (26)
	Type -> array Array of Type                        (27)
	Type -> '^' Type                                   (28)
	Array -> '[' intconst ']'                          (29)
	Array ->                                           (30)
	Block -> begin Stmt Stmts end                      (31)
	Stmts -> Stmts ';' Stmt                            (32)
	Stmts ->                                           (33)
	Stmt ->                                            (34)
	Stmt -> LValue equal Expr                          (35)
	Stmt -> Block                                      (36)
	Stmt -> Call                                       (37)
	Stmt -> if Expr then Stmt Else                     (38)
	Stmt -> while Expr do Stmt                         (39)
	Stmt -> id ':' Stmt                                (40)
	Stmt -> goto id                                    (41)
	Stmt -> return                                     (42)
	Stmt -> new New LValue                             (43)
	Stmt -> dispose Dispose LValue                     (44)
	Else -> else Stmt                                  (45)
	Else ->                                            (46)
	New -> '[' Expr ']'                                (47)
	New ->                                             (48)
	Dispose -> '[' ']'                                 (49)
	Dispose ->                                         (50)
	Expr -> LValue                                     (51)
	Expr -> RValue                                     (52)
	LValue -> id                                       (53)
	LValue -> result                                   (54)
	LValue -> stringconst                              (55)
	LValue -> LValue '[' Expr ']'                      (56)
	LValue -> Expr '^'                                 (57)
	LValue -> '(' LValue ')'                           (58)
	RValue -> intconst                                 (59)
	RValue -> true                                     (60)
	RValue -> false                                    (61)
	RValue -> realconst                                (62)
	RValue -> charconst                                (63)
	RValue -> '(' RValue ')'                           (64)
	RValue -> nil                                      (65)
	RValue -> Call                                     (66)
	RValue -> '@' LValue                               (67)
	RValue -> not Expr                                 (68)
	RValue -> '+' Expr                                 (69)
	RValue -> '-' Expr                                 (70)
	RValue -> Expr '+' Expr                            (71)
	RValue -> Expr '*' Expr                            (72)
	RValue -> Expr '-' Expr                            (73)
	RValue -> Expr '/' Expr                            (74)
	RValue -> Expr div Expr                            (75)
	RValue -> Expr mod Expr                            (76)
	RValue -> Expr or Expr                             (77)
	RValue -> Expr and Expr                            (78)
	RValue -> Expr '=' Expr                            (79)
	RValue -> Expr diff Expr                           (80)
	RValue -> Expr '<' Expr                            (81)
	RValue -> Expr '>' Expr                            (82)
	RValue -> Expr greq Expr                           (83)
	RValue -> Expr smeq Expr                           (84)
	Call -> id '(' Call2 ')'                           (85)
	Call2 ->                                           (86)
	Call2 -> Expr Call3                                (87)
	Call3 -> Call3 ',' Expr                            (88)
	Call3 ->                                           (89)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	and            { TAnd }
	array          { TArray }
	begin          { TBegin }
	boolean        { TBoolean }
	char           { TChar }
	dispose        { TDispose }
	div            { TDivInt }
	do             { TDo }
	else           { TElse }
	end            { TEnd }
	false          { TFalse }
	forward        { TForward }
	function       { TFunction }
	goto           { TGoto }
	if             { TIf }
	integer        { TInteger }
	label          { TLabel }
	mod            { TMod }
	new            { TNew }
	nil            { TNil }
	not            { TNot }
	of             { TOf }
	or             { TOr }
	procedure      { TProcedure }
	program        { TProgram }
	real           { TReal }
	result         { TResult }
	return         { TReturn }
	then           { TThen }
	true           { TTrue }
	var            { TVar }
	while          { TWhile }
	id             { TId          $$ }
	intconst       { TIntconst    $$ }
	realconst      { TRealconst   $$ }
	charconst      { TCharconst   $$ }
	stringconst    { TStringconst $$ }
	'='            { TLogiceq }
	'>'            { TGreater }
	'<'            { TSmaller }
	diff           { TDifferent }
	greq           { TGreaterequal }
	smeq           { TSmallerequal }
	'+'            { TAdd }
	'-'            { TMinus }
	'*'            { TMul }
	'/'            { TDivReal }
	'^'            { TPointer }
	'@'            { TAdress }
	equal          { TEq }
	';'            { TSeperator }
	'.'            { TDot }
	'('            { TLeftparen }
	')'            { TRightparen }
	':'            { TUpdown }
	','            { TComma }
	'['            { TLeftbracket }
	']'            { TRightbracket }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rule  1
	Body            rule  2
	Locals          rules 3, 4
	Local           rules 5, 6, 7, 8
	Variables       rules 9, 10
	IdsAndType      rule  11
	Ids             rules 12, 13
	Header          rules 14, 15
	Arguments1      rules 16, 17
	Arguments2      rules 18, 19
	Formal          rule  20
	Vars            rules 21, 22
	Type            rules 23, 24, 25, 26, 27, 28
	Array           rules 29, 30
	Block           rule  31
	Stmts           rules 32, 33
	Stmt            rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	Else            rules 45, 46
	New             rules 47, 48
	Dispose         rules 49, 50
	Expr            rules 51, 52
	LValue          rules 53, 54, 55, 56, 57, 58
	RValue          rules 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84
	Call            rule  85
	Call2           rules 86, 87
	Call3           rules 88, 89

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	program        shift, and enter state 2

	Program        goto state 3

State 1


	program        shift, and enter state 2


State 2

	Program -> program . id ';' Body '.'                (rule 1)

	id             shift, and enter state 4


State 3

	%start_parse -> Program .                           (rule 0)

	%eof           accept


State 4

	Program -> program id . ';' Body '.'                (rule 1)

	';'            shift, and enter state 5


State 5

	Program -> program id ';' . Body '.'                (rule 1)

	begin          reduce using rule 4
	forward        reduce using rule 4
	function       reduce using rule 4
	label          reduce using rule 4
	procedure      reduce using rule 4
	var            reduce using rule 4

	Body           goto state 6
	Locals         goto state 7

State 6

	Program -> program id ';' Body . '.'                (rule 1)

	'.'            shift, and enter state 17


State 7

	Body -> Locals . Block                              (rule 2)
	Locals -> Locals . Local                            (rule 3)

	begin          shift, and enter state 11
	forward        shift, and enter state 12
	function       shift, and enter state 13
	label          shift, and enter state 14
	procedure      shift, and enter state 15
	var            shift, and enter state 16

	Local          goto state 8
	Header         goto state 9
	Block          goto state 10

State 8

	Locals -> Locals Local .                            (rule 3)

	begin          reduce using rule 3
	forward        reduce using rule 3
	function       reduce using rule 3
	label          reduce using rule 3
	procedure      reduce using rule 3
	var            reduce using rule 3


State 9

	Local -> Header . ';' Body ';'                      (rule 7)

	';'            shift, and enter state 51


State 10

	Body -> Locals Block .                              (rule 2)

	';'            reduce using rule 2
	'.'            reduce using rule 2


State 11

	Block -> begin . Stmt Stmts end                     (rule 31)

	begin          shift, and enter state 11
	dispose        shift, and enter state 31
	end            reduce using rule 34
	false          shift, and enter state 32
	goto           shift, and enter state 33
	if             shift, and enter state 34
	new            shift, and enter state 35
	nil            shift, and enter state 36
	not            shift, and enter state 37
	result         shift, and enter state 38
	return         shift, and enter state 39
	true           shift, and enter state 40
	while          shift, and enter state 41
	id             shift, and enter state 42
	intconst       shift, and enter state 43
	realconst      shift, and enter state 44
	charconst      shift, and enter state 45
	stringconst    shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'@'            shift, and enter state 49
	';'            reduce using rule 34
	'('            shift, and enter state 50

	Block          goto state 25
	Stmt           goto state 26
	Expr           goto state 27
	LValue         goto state 28
	RValue         goto state 29
	Call           goto state 30

State 12

	Local -> forward . Header ';'                       (rule 8)

	function       shift, and enter state 13
	procedure      shift, and enter state 15

	Header         goto state 24

State 13

	Header -> function . id '(' Arguments1 ')' ':' Type    (rule 15)

	id             shift, and enter state 23


State 14

	Local -> label . id Ids ';'                         (rule 6)

	id             shift, and enter state 22


State 15

	Header -> procedure . id '(' Arguments1 ')'         (rule 14)

	id             shift, and enter state 21


State 16

	Local -> var . Variables                            (rule 5)

	id             shift, and enter state 20

	Variables      goto state 18
	IdsAndType     goto state 19

State 17

	Program -> program id ';' Body '.' .                (rule 1)

	%eof           reduce using rule 1


State 18

	Local -> var Variables .                            (rule 5)
	Variables -> Variables . IdsAndType                 (rule 9)

	begin          reduce using rule 5
	forward        reduce using rule 5
	function       reduce using rule 5
	label          reduce using rule 5
	procedure      reduce using rule 5
	var            reduce using rule 5
	id             shift, and enter state 20

	IdsAndType     goto state 94

State 19

	Variables -> IdsAndType .                           (rule 10)

	begin          reduce using rule 10
	forward        reduce using rule 10
	function       reduce using rule 10
	label          reduce using rule 10
	procedure      reduce using rule 10
	var            reduce using rule 10
	id             reduce using rule 10


State 20

	IdsAndType -> id . Ids ':' Type ';'                 (rule 11)

	':'            reduce using rule 13
	','            reduce using rule 13

	Ids            goto state 93

State 21

	Header -> procedure id . '(' Arguments1 ')'         (rule 14)

	'('            shift, and enter state 92


State 22

	Local -> label id . Ids ';'                         (rule 6)

	';'            reduce using rule 13
	','            reduce using rule 13

	Ids            goto state 91

State 23

	Header -> function id . '(' Arguments1 ')' ':' Type    (rule 15)

	'('            shift, and enter state 90


State 24

	Local -> forward Header . ';'                       (rule 8)

	';'            shift, and enter state 89


State 25

	Stmt -> Block .                                     (rule 36)

	else           reduce using rule 36
	end            reduce using rule 36
	';'            reduce using rule 36


State 26

	Block -> begin Stmt . Stmts end                     (rule 31)

	end            reduce using rule 33
	';'            reduce using rule 33

	Stmts          goto state 88

State 27

	LValue -> Expr . '^'                                (rule 57)
	RValue -> Expr . '+' Expr                           (rule 71)
	RValue -> Expr . '*' Expr                           (rule 72)
	RValue -> Expr . '-' Expr                           (rule 73)
	RValue -> Expr . '/' Expr                           (rule 74)
	RValue -> Expr . div Expr                           (rule 75)
	RValue -> Expr . mod Expr                           (rule 76)
	RValue -> Expr . or Expr                            (rule 77)
	RValue -> Expr . and Expr                           (rule 78)
	RValue -> Expr . '=' Expr                           (rule 79)
	RValue -> Expr . diff Expr                          (rule 80)
	RValue -> Expr . '<' Expr                           (rule 81)
	RValue -> Expr . '>' Expr                           (rule 82)
	RValue -> Expr . greq Expr                          (rule 83)
	RValue -> Expr . smeq Expr                          (rule 84)

	and            shift, and enter state 73
	div            shift, and enter state 74
	mod            shift, and enter state 75
	or             shift, and enter state 76
	'='            shift, and enter state 77
	'>'            shift, and enter state 78
	'<'            shift, and enter state 79
	diff           shift, and enter state 80
	greq           shift, and enter state 81
	smeq           shift, and enter state 82
	'+'            shift, and enter state 83
	'-'            shift, and enter state 84
	'*'            shift, and enter state 85
	'/'            shift, and enter state 86
	'^'            shift, and enter state 87


State 28

	Stmt -> LValue . equal Expr                         (rule 35)
	Expr -> LValue .                                    (rule 51)
	LValue -> LValue . '[' Expr ']'                     (rule 56)

	and            reduce using rule 51
	div            reduce using rule 51
	mod            reduce using rule 51
	or             reduce using rule 51
	'='            reduce using rule 51
	'>'            reduce using rule 51
	'<'            reduce using rule 51
	diff           reduce using rule 51
	greq           reduce using rule 51
	smeq           reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'^'            reduce using rule 51
	equal          shift, and enter state 71
	'['            shift, and enter state 72


State 29

	Expr -> RValue .                                    (rule 52)

	and            reduce using rule 52
	div            reduce using rule 52
	do             reduce using rule 52
	else           reduce using rule 52
	end            reduce using rule 52
	mod            reduce using rule 52
	or             reduce using rule 52
	then           reduce using rule 52
	'='            reduce using rule 52
	'>'            reduce using rule 52
	'<'            reduce using rule 52
	diff           reduce using rule 52
	greq           reduce using rule 52
	smeq           reduce using rule 52
	'+'            reduce using rule 52
	'-'            reduce using rule 52
	'*'            reduce using rule 52
	'/'            reduce using rule 52
	'^'            reduce using rule 52
	';'            reduce using rule 52
	')'            reduce using rule 52
	','            reduce using rule 52
	']'            reduce using rule 52


State 30

	Stmt -> Call .                                      (rule 37)
	RValue -> Call .                                    (rule 66)

	and            reduce using rule 66
	div            reduce using rule 66
	else           reduce using rule 37
	end            reduce using rule 37
	mod            reduce using rule 66
	or             reduce using rule 66
	'='            reduce using rule 66
	'>'            reduce using rule 66
	'<'            reduce using rule 66
	diff           reduce using rule 66
	greq           reduce using rule 66
	smeq           reduce using rule 66
	'+'            reduce using rule 66
	'-'            reduce using rule 66
	'*'            reduce using rule 66
	'/'            reduce using rule 66
	'^'            reduce using rule 66
	';'            reduce using rule 37


State 31

	Stmt -> dispose . Dispose LValue                    (rule 44)

	false          reduce using rule 50
	nil            reduce using rule 50
	not            reduce using rule 50
	result         reduce using rule 50
	true           reduce using rule 50
	id             reduce using rule 50
	intconst       reduce using rule 50
	realconst      reduce using rule 50
	charconst      reduce using rule 50
	stringconst    reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'@'            reduce using rule 50
	'('            reduce using rule 50
	'['            shift, and enter state 70

	Dispose        goto state 69

State 32

	RValue -> false .                                   (rule 61)

	and            reduce using rule 61
	div            reduce using rule 61
	do             reduce using rule 61
	else           reduce using rule 61
	end            reduce using rule 61
	mod            reduce using rule 61
	or             reduce using rule 61
	then           reduce using rule 61
	'='            reduce using rule 61
	'>'            reduce using rule 61
	'<'            reduce using rule 61
	diff           reduce using rule 61
	greq           reduce using rule 61
	smeq           reduce using rule 61
	'+'            reduce using rule 61
	'-'            reduce using rule 61
	'*'            reduce using rule 61
	'/'            reduce using rule 61
	'^'            reduce using rule 61
	';'            reduce using rule 61
	')'            reduce using rule 61
	','            reduce using rule 61
	']'            reduce using rule 61


State 33

	Stmt -> goto . id                                   (rule 41)

	id             shift, and enter state 68


State 34

	Stmt -> if . Expr then Stmt Else                    (rule 38)

	false          shift, and enter state 32
	nil            shift, and enter state 36
	not            shift, and enter state 37
	result         shift, and enter state 38
	true           shift, and enter state 40
	id             shift, and enter state 56
	intconst       shift, and enter state 43
	realconst      shift, and enter state 44
	charconst      shift, and enter state 45
	stringconst    shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'@'            shift, and enter state 49
	'('            shift, and enter state 50

	Expr           goto state 67
	LValue         goto state 59
	RValue         goto state 29
	Call           goto state 55

State 35

	Stmt -> new . New LValue                            (rule 43)

	false          reduce using rule 48
	nil            reduce using rule 48
	not            reduce using rule 48
	result         reduce using rule 48
	true           reduce using rule 48
	id             reduce using rule 48
	intconst       reduce using rule 48
	realconst      reduce using rule 48
	charconst      reduce using rule 48
	stringconst    reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'@'            reduce using rule 48
	'('            reduce using rule 48
	'['            shift, and enter state 66

	New            goto state 65

State 36

	RValue -> nil .                                     (rule 65)

	and            reduce using rule 65
	div            reduce using rule 65
	do             reduce using rule 65
	else           reduce using rule 65
	end            reduce using rule 65
	mod            reduce using rule 65
	or             reduce using rule 65
	then           reduce using rule 65
	'='            reduce using rule 65
	'>'            reduce using rule 65
	'<'            reduce using rule 65
	diff           reduce using rule 65
	greq           reduce using rule 65
	smeq           reduce using rule 65
	'+'            reduce using rule 65
	'-'            reduce using rule 65
	'*'            reduce using rule 65
	'/'            reduce using rule 65
	'^'            reduce using rule 65
	';'            reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	']'            reduce using rule 65


State 37

	RValue -> not . Expr                                (rule 68)

	false          shift, and enter state 32
	nil            shift, and enter state 36
	not            shift, and enter state 37
	result         shift, and enter state 38
	true           shift, and enter state 40
	id             shift, and enter state 56
	intconst       shift, and enter state 43
	realconst      shift, and enter state 44
	charconst      shift, and enter state 45
	stringconst    shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'@'            shift, and enter state 49
	'('            shift, and enter state 50

	Expr           goto state 64
	LValue         goto state 59
	RValue         goto state 29
	Call           goto state 55

State 38

	LValue -> result .                                  (rule 54)

	and            reduce using rule 54
	div            reduce using rule 54
	do             reduce using rule 54
	else           reduce using rule 54
	end            reduce using rule 54
	mod            reduce using rule 54
	or             reduce using rule 54
	then           reduce using rule 54
	'='            reduce using rule 54
	'>'            reduce using rule 54
	'<'            reduce using rule 54
	diff           reduce using rule 54
	greq           reduce using rule 54
	smeq           reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'*'            reduce using rule 54
	'/'            reduce using rule 54
	'^'            reduce using rule 54
	equal          reduce using rule 54
	';'            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	'['            reduce using rule 54
	']'            reduce using rule 54


State 39

	Stmt -> return .                                    (rule 42)

	else           reduce using rule 42
	end            reduce using rule 42
	';'            reduce using rule 42


State 40

	RValue -> true .                                    (rule 60)

	and            reduce using rule 60
	div            reduce using rule 60
	do             reduce using rule 60
	else           reduce using rule 60
	end            reduce using rule 60
	mod            reduce using rule 60
	or             reduce using rule 60
	then           reduce using rule 60
	'='            reduce using rule 60
	'>'            reduce using rule 60
	'<'            reduce using rule 60
	diff           reduce using rule 60
	greq           reduce using rule 60
	smeq           reduce using rule 60
	'+'            reduce using rule 60
	'-'            reduce using rule 60
	'*'            reduce using rule 60
	'/'            reduce using rule 60
	'^'            reduce using rule 60
	';'            reduce using rule 60
	')'            reduce using rule 60
	','            reduce using rule 60
	']'            reduce using rule 60


State 41

	Stmt -> while . Expr do Stmt                        (rule 39)

	false          shift, and enter state 32
	nil            shift, and enter state 36
	not            shift, and enter state 37
	result         shift, and enter state 38
	true           shift, and enter state 40
	id             shift, and enter state 56
	intconst       shift, and enter state 43
	realconst      shift, and enter state 44
	charconst      shift, and enter state 45
	stringconst    shift, and enter state 46
	'+'            shift, and enter state 47
	'-'            shift, and enter state 48
	'@'            shift, and enter state 49
	'('            shift, and enter state 50

	Expr           goto state 63
	LValue         goto state 59
	RValue         goto state 29
	Call           goto state 55

State 42

	Stmt -> id . ':' Stmt                               (rule 40)
	LValue -> id .                                      (rule 53)
	Call -> id . '(' Call2 ')'                          (rule 85)

	and            reduce using rule 53
	div            reduce using rule 53
	mod            reduce using rule 53
	or             reduce using rule 53
	'='            reduce using rule 53
	'>'            reduce using rule 53
	'<'            reduce using rule 53
	diff           reduce using rule 53
	greq           reduce using rule 53
	smeq           reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'*'            reduce using rule 53
	'/'            reduce using rule 53
	'^'            reduce using rule 53
	equal          reduce using rule 53
	'('            shift, and enter state 61
	':'            shift, and enter state 62
	'['            reduce using rule 53


State 43

	RValue -> intconst .                                (rule 59)

	and            reduce using rule 59
	div            reduce using rule 59
	do             reduce using rule 59
	else           reduce using rule 59
	end            reduce using rule 59
	mod            reduce using rule 59
	or             reduce using rule 59
	then           reduce using rule 59
	'='            reduce using rule 59
	'>'            reduce using rule 59
	'<'            reduce using rule 59
	diff           reduce using rule 59
	greq           reduce using rule 59
	smeq           reduce using rule 59
	'+'            reduce using rule 59
	'-'            reduce using rule 59
	'*'            reduce using rule 59
	'/'            reduce using rule 59
	'^'            reduce using rule 59
	';'            reduce using rule 59
	')'            reduce using rule 59
	','            reduce using rule 59
	']'            reduce using rule 59


State 44

	RValue -> realconst .                               (rule 62)

	and            reduce using rule 62
	div            reduce using rule 62
	do             reduce using rule 62
	else           reduce using rule 62
	end            reduce using rule 62
	mod            reduce using rule 62
	or             reduce using rule 62
	then           reduce using rule 62
	'='            reduce using rule 62
	'>'            reduce using rule 62
	'<'            reduce using rule 62
	diff           reduce using rule 62
	greq           reduce using rule 62
	smeq           reduce using rule 62
	'+'            reduce using rule 62
	'-'            reduce using rule 62
	'*'            reduce using rule 62
	'/'            reduce using rule 62
	'^'            reduce using rule 62
	';'            reduce using rule 62
	')'            reduce using rule 62
	','            reduce using rule 62
	']'            reduce using rule 62


State 45

	RValue -> charconst .                               (rule 63)

	and            reduce using rule 63
	div            reduce using rule 63
	do             reduce using rule 63
	else           reduce using rule 63
	end            reduce using rule 63
	mod            reduce using rule 63
	or             reduce using rule 63
	then           reduce using rule 63
	'='            reduce using rule 63
	'>'            reduce using rule 63
	'<'            reduce using rule 63
	diff           reduce using rule 63
	greq           reduce using rule 63
	smeq           reduce using rule 63
	'+'            reduce using rule 63
	'-'            reduce using rule 63
	'*'            reduce using rule 63
	'/'            reduce using rule 63
	'^'            reduce using rule 63
	';'            reduce using rule 63
	')'            reduce using rule 63
	','            reduce using rule 63
	']'            reduce using rule 63


State 46

	LValue -> stringconst .                             (rule 55)
